2020-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-3141.c:
	  Fix bug #3141.

2020-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c:
	  Disable array initalizer support for gbz80 in trunk, so the remining issues can be worked out in a branch instead.

2020-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3134.

2020-10-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h:
	  Increase limits, patch by Oleg Endo <olegendo@gcc.gnu.org>.
	* support/regression/Makefile.in:
	  add pdk15-stack-auto ton default target.

2020-10-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c:
	  Improve register allocation for bitwise xor.

2020-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3135.c,
	  src/z80/ralloc2.cc:
	  Attempt to fix bug #3135.
	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c:
	  Improve register allocation for bitwise and, or.

2020-10-21 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c,
	* src/z80/mappings.i:
	  Fix bug #3137.

2020-10-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCC.lex:
	  Improve diagnostics for binary integer literals.

2020-10-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/r2k/crt0.s,
	  device/lib/r2ka/crt0.s,
	  device/lib/r3ka/crt0.s,
	  .version:
	  Use a default crt0 that works well on typical Rabbit hardware.

2020-10-13 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c:
	  Peephole rule immdInRange now accepts mul, div, and mod operations.
	  immdInRange silently fail in case of non-number (label) arguments.
	* src/z80/peeph.def:
	  Add new peephole rules.

2020-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3129.c:
	  Disable test for ds390.
	* support/regression/tests/bug-3132.c:
	  Remove conflicting (for ds390) __sdcc_external_startup definition.
