@@ -5,6 +5,7 @@
     right: 0,1
     vol: 0,1
     sign: u,
+    goal: 0, 1, 2
 */
 #include <testfwk.h>
 #ifdef __sun__
@@ -16,6 +17,7 @@
 #define SIZE    ({size})
 #define RIGHT   ({right})
 #define VOL     ({vol})
+#define GOAL    ({goal})
 
 #if SIZE == 8
 #  define TYPE {sign}int8_t
@@ -36,6 +38,12 @@
 #  define SHIFT(x,y) (TYPE)((TYPE)(x)<<(y))
 #else
 #  define SHIFT(x,y) (TYPE)((TYPE)(x)>>(y))
+#endif
+
+#if GOAL == 1
+#pragma opt_code_size
+#elif GOAL == 2
+#pragma opt_code_speed
 #endif
 
 #if VOL == 0
